finished? for now...

--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 
 		<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="js/bootstrap.js"></script>
+		<link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
+		<link rel="icon" href="img/icon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<section class="container">
@@ -23,7 +25,7 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 			</header>
 			<header class="subheader row">
 				<img src="img/mountain.jpg" alt="subtitle picture" class="img-circle header-image center-block">
-				<h2 class="text-center" id="subtitletext">This is a demostration that I can do stuff with CSS</h2>
+				<h2 class="text-center" id="subtitletext">This is a demonstration that I can do stuff with CSS</h2>
 			</header>
 			<div class="row">
 				<nav class="col-lg-4 navbar-right">
@@ -53,10 +55,13 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 						</li>
 					</ul>
 				</nav>
-
-				<div class="col-lg-8">
-					<h3>Lorem Ipsum</h3>
+				<div class="col-lg-8 content-box">
+					<h3 class="content-heading">Lorem Ipsum</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris hendrerit neque sem, nec placerat lacus viverra sit amet. Maecenas dignissim iaculis quam nec fermentum. Nulla pharetra metus sed augue eleifend placerat. Nullam aliquet augue sit amet justo egestas, vel congue tortor condimentum. Nulla aliquet risus neque, ut scelerisque quam accumsan nec. Donec convallis, leo in volutpat facilisis, nisi sem blandit augue, id mattis augue erat vel mauris. Integer bibendum dictum ante, vel viverra ante dignissim eget. Phasellus vitae porttitor ex.</p>
+				</div>
+				<div class="col-lg-8 content-box">
+					<h3 class="content-heading">A picture</h3>
+					<img src="img/sheep.jpg" alt="sheep!" class="img-rounded content-image center-block">
 				</div>
 			</div>
 		<footer class="row">
