--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 <html>
 	<head>
 		<title>My Home Page</title>
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&effect=fire-animation" rel="stylesheet">
+
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 		<!-- CUSTOM CSS -->
@@ -21,7 +23,7 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 	<body>
 		<section class="container">
 			<header class="mainheader row">
-				<h1 class="text-center" id="thetitle">IT 210 Website</h1>
+				<h1 class="text-center font-effect-fire-animation" id="thetitle">IT 210 Website</h1>
 			</header>
 			<header class="subheader row">
 				<img src="img/mountain.jpg" alt="subtitle picture" class="img-circle header-image center-block">
