--- a/endorsements.html
+++ b/endorsements.html
@@ -7,7 +7,9 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 
 <html>
 	<head>
-		<title>My Home Page</title>
+		<title>Endorsements</title>
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&effect=fire-animation" rel="stylesheet">
+
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 		<!-- CUSTOM CSS -->
@@ -15,17 +17,18 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 
 		<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="js/bootstrap.js"></script>
+		<script src="js/it210-endorsements.js"></script>
 		<link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
 		<link rel="icon" href="img/icon.ico" type="image/x-icon">
 	</head>
-	<body>
+	<body onload="localJSONCheck(); endorOnload();">
 		<section class="container">
 			<header class="mainheader row">
-				<h1 class="text-center" id="thetitle">IT 210 Website</h1>
+				<h1 class="text-center font-effect-fire-animation" id="thetitle">IT 210 Website</h1>
 			</header>
 			<header class="subheader row">
 				<img src="img/mountain.jpg" alt="subtitle picture" class="img-circle header-image center-block">
-				<h2 class="text-center" id="subtitletext">This is a demonstration that I can do stuff with CSS</h2>
+				<h2 class="text-center" id="subtitletext">Here are some endorsements from people who might like me!</h2>
 			</header>
 			<div class="row">
 				<nav class="col-lg-4 navbar-right">
@@ -56,12 +59,25 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 					</ul>
 				</nav>
 				<div class="col-lg-8 content-box">
-					<h3 class="content-heading">Lorem Ipsum</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris hendrerit neque sem, nec placerat lacus viverra sit amet. Maecenas dignissim iaculis quam nec fermentum. Nulla pharetra metus sed augue eleifend placerat. Nullam aliquet augue sit amet justo egestas, vel congue tortor condimentum. Nulla aliquet risus neque, ut scelerisque quam accumsan nec. Donec convallis, leo in volutpat facilisis, nisi sem blandit augue, id mattis augue erat vel mauris. Integer bibendum dictum ante, vel viverra ante dignissim eget. Phasellus vitae porttitor ex.</p>
+					<h3 class="content-heading">Write an endorsement</h3>
+					<form onsubmit="return false">
+						<div class="form-group">
+							<label for="text">Your Name</label>
+							<input onkeyup="saveComments()" type="text" class="form-control" id="nameField" placeholder="John Smith"></input>
+						</div>
+						<div class="form-group">
+							<label for="textarea">Your Endorsement</label>
+							<textarea onkeyup="saveComments()" class="form-control" id="commentField" placeholder="I think he is really great!" rows="5"></textarea>
+						</div>
+						<button type="submit" class="btn btn-default" onclick="commitNewEndorsement()">Submit</button>
+					</form>
 				</div>
 				<div class="col-lg-8 content-box">
-					<h3 class="content-heading">A picture</h3>
-					<img src="img/sheep.jpg" alt="sheep!" class="img-rounded content-image center-block">
+					<h3 class="content-heading">What others have said</h3>
+					<button class="btn btn-default" onclick="sortByKey('name'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Name</button>
+					<button class="btn btn-default" onclick="sortByKey('timestamp'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Time</button>
+					<div id="AllEndor">
+					</div>
 				</div>
 			</div>
 		<footer class="row">
