--- a/endorsements.html
+++ b/endorsements.html
@@ -69,13 +69,17 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 							<label for="textarea">Your Endorsement</label>
 							<textarea onkeyup="saveComments()" class="form-control" id="commentField" placeholder="I think he is really great!" rows="5"></textarea>
 						</div>
+						<div class="form-group">
+							<label for="date">Date of Endorsement</label>
+							<input onkeyup="saveComments()" type="date" id="timeField">
+						</div>
 						<button type="submit" class="btn btn-default" onclick="commitNewEndorsement()">Submit</button>
 					</form>
 				</div>
 				<div class="col-lg-8 content-box">
 					<h3 class="content-heading">What others have said</h3>
 					<button class="btn btn-default" onclick="sortByKey('name'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Name</button>
-					<button class="btn btn-default" onclick="sortByKey('timestamp'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Time</button>
+					<button class="btn btn-default" onclick="sortByKey('date'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Time</button>
 					<div id="AllEndor">
 					</div>
 				</div>
