should be done with jslab

--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,15 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 						</li>
 						<li class="nav-item">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="true"><span class="glyphicon glyphicon-ice-lolly-tasted"></span> My projects <span class="glyphicon glyphicon-menu-down"></span></a>
-					    <ul class="dropdown-menu">
+							<ul class="dropdown-menu">
 								<li>
-									<a href="project1.html" class="nav-link"><span class="glyphicon glyphicon-king"></span> Project 1</a>
+									<a href="project.html?project=0" class="nav-link"><span class="glyphicon glyphicon-king"></span> Project 1</a>
 								</li>
 								<li>
-									<a href="project2.html" class="nav-link"><span class="glyphicon glyphicon-queen"></span> Project 2</a>
+									<a href="project.html?project=1" class="nav-link"><span class="glyphicon glyphicon-queen"></span> Project 2</a>
 								</li>
 								<li>
-									<a href="project3.html" class="nav-link"><span class="glyphicon glyphicon-pawn"></span> Project 3</a>
+									<a href="project.html?project=2" class="nav-link"><span class="glyphicon glyphicon-pawn"></span> Project 3</a>
 								</li>
 							</ul>
 						</li>
