--- a/endorsements.html
+++ b/endorsements.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
 
-<!--
-Created by:Tyler Bristow
-This is an outline of a basic HTML page. Feel free to make any changes you would like.
--->
 
 <html>
 	<head>
@@ -21,7 +17,7 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 		<link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
 		<link rel="icon" href="img/icon.ico" type="image/x-icon">
 	</head>
-	<body onload="localJSONCheck(); endorOnload();">
+	<body>
 		<section class="container">
 			<header class="mainheader row">
 				<h1 class="text-center font-effect-fire-animation" id="thetitle">IT 210 Website</h1>
@@ -38,15 +34,15 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 						</li>
 						<li class="nav-item">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="true"><span class="glyphicon glyphicon-ice-lolly-tasted"></span> My projects <span class="glyphicon glyphicon-menu-down"></span></a>
-					    <ul class="dropdown-menu">
+							<ul class="dropdown-menu">
 								<li>
-									<a href="project1.html" class="nav-link"><span class="glyphicon glyphicon-king"></span> Project 1</a>
+									<a href="project.html?project=0" class="nav-link"><span class="glyphicon glyphicon-king"></span> Project 1</a>
 								</li>
 								<li>
-									<a href="project2.html" class="nav-link"><span class="glyphicon glyphicon-queen"></span> Project 2</a>
+									<a href="project.html?project=1" class="nav-link"><span class="glyphicon glyphicon-queen"></span> Project 2</a>
 								</li>
 								<li>
-									<a href="project3.html" class="nav-link"><span class="glyphicon glyphicon-pawn"></span> Project 3</a>
+									<a href="project.html?project=2" class="nav-link"><span class="glyphicon glyphicon-pawn"></span> Project 3</a>
 								</li>
 							</ul>
 						</li>
@@ -73,13 +69,32 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 							<label for="date">Date of Endorsement</label>
 							<input onkeyup="saveComments()" type="date" id="timeField">
 						</div>
-						<button type="submit" class="btn btn-default" onclick="commitNewEndorsement()">Submit</button>
+						<button type="submit" data-toggle="modal" class="btn btn-default" data-target="#myModal">Submit</button>
 					</form>
+					<div id="myModal" class="modal fade" role="dialog">
+					  <div class="modal-dialog">
+
+					    <!-- Modal content-->
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <h4 class="modal-title">Submit Endorsement?</h4>
+					      </div>
+					      <div class="modal-body">
+					        <p>Are you sure you want to submit your endorsement?</script></p>
+					      </div>
+					      <div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal" onclick="commitNewEndorsement()">Okay</button>
+					        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>
 				</div>
 				<div class="col-lg-8 content-box">
 					<h3 class="content-heading">What others have said</h3>
-					<button class="btn btn-default" onclick="sortByKey('name'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Name</button>
-					<button class="btn btn-default" onclick="sortByKey('date'); document.getElementById('AllEndor').innerHTML = ''; endorOnload();">Sort by Time</button>
+					<button class="btn btn-default" onclick="sortByKey('name');">Sort by Name</button>
+					<button class="btn btn-default" onclick="sortByKey('date');">Sort by Time</button>
 					<div id="AllEndor">
 					</div>
 				</div>
