--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@ This is an outline of a basic HTML page. Feel free to make any changes you would
 							<a href="endorsements.html" class="nav-link"><span class="glyphicon glyphicon-gift"></span> Endorsements from others</a>
 						</li>
 						<li class="nav-item">
-							<a href="contact.html" class="nav-link"><span class="glyphicon glyphicon-envelope"></span> Contact me</a>
+							<a href="login.php" class="nav-link"><span class="glyphicon glyphicon-envelope"></span> Contact me</a>
 						</li>
 					</ul>
 				</nav>
